Fix some additional Java8 warnings
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>